Moving EMImpl to old state

--- a/marklogic-data-hub/build.gradle
+++ b/marklogic-data-hub/build.gradle
@@ -420,14 +420,18 @@ ext {
 }
 
 task bootstrap(type: JavaExec) {
-    println 'Starting bootstrap task'
-    project.logger.info('Starting bootstrap task')
-    description = "Install the test application - an instance of DHF - so that the tests can be run against it"
-    classpath = sourceSets.test.runtimeClasspath
-    main = 'com.marklogic.bootstrap.TestAppInstaller'
-    systemProperty "mlHost", mlHost
-    println 'completed bootstrap task'
-    project.logger.info('completed bootstrap task')
+//    try {
+        println 'Starting bootstrap task'
+        project.logger.info('Starting bootstrap task')
+        description = "Install the test application - an instance of DHF - so that the tests can be run against it"
+        classpath = sourceSets.test.runtimeClasspath
+        main = 'com.marklogic.bootstrap.TestAppInstaller'
+        systemProperty "mlHost", mlHost
+        println 'completed bootstrap task'
+        project.logger.info('completed bootstrap task')
+//    } catch(Exception e) {
+//        e.printStackTrace();
+//    }
 }
 bootstrap.dependsOn extractFastXmlParserZip
 bootstrap.finalizedBy mlPrepareBundles // ensures that marklogic-unit-test is downloaded
@@ -458,6 +462,7 @@ test {
     minHeapSize = "128m"
     maxHeapSize = "256m"
     classpath = project.sourceSets.test.runtimeClasspath
+    println "Started test task"
 }
 
 task bootstrapAndTest(dependsOn:["bootstrap", "test"])
